--- a/server/.env
+++ b/server/.env
@@ -6,3 +6,8 @@ CLIENT_URL=http://localhost:5173
 ADMIN_URL=http://localhost:5174
 RAZORPAY_KEY_ID=rzp_test_S1ine1s34el7Yi
 RAZORPAY_KEY_SECRET=ER9Z8qr4IzKMJjdzPojTaL1C
+
+# Cloudinary — fill these in from your Cloudinary console
+CLOUDINARY_CLOUD_NAME=your_cloud_name
+CLOUDINARY_API_KEY=your_api_key
+CLOUDINARY_API_SECRET=your_api_secret
