--- a/server/.env
+++ b/server/.env
@@ -2,8 +2,8 @@ PORT=5000
 MONGO_URI=mongodb+srv://ecombazar:ecombazar123@ecombazar.5euuget.mongodb.net/?appName=ecombazar
 JWT_SECRET=digd$%$*hjcyc36hy^%nugspjbwig59831ydq%^&@gygu%654jvfubi%
 NODE_ENV=development
-CLIENT_URL=http://localhost:5173
-ADMIN_URL=http://localhost:5174
+CLIENT_URL=https://ecombazaar.tconsolutions.com
+ADMIN_URL=https://ecombazaaradmin.tconsolutions.com
 RAZORPAY_KEY_ID=rzp_test_S1ine1s34el7Yi
 RAZORPAY_KEY_SECRET=ER9Z8qr4IzKMJjdzPojTaL1C
 
